driver tracking logic
